@@ -51,6 +51,7 @@ Template for new versions:
 - `gui/design`: significant redesign of UI for much improved usability
 - `gui/quickfort`: delete blueprints from the blueprint load dialog
 - `quickfort`: new ``delete`` command for deleting player-owned blueprints (library and mod-added blueprints cannot be deleted)
+- `gui/launcher`: refresh default tag filter when mortal mode is toggled in `gui/control-panel` so changes to which tools autocomplete take effect immediately
 
 ## Removed
 - `max-wave`: merged into `pop-control`
